Few changes in reportPreview - separated modals to additionalCompononents in Doctor.Reports

--- a/Patient.Api/Patient.Api/Components/Logging/DoctorLoggingPage.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/DoctorLoggingPage.razor
@@ -1,4 +1,8 @@
-﻿@inject NavigationManager Navigation
+﻿@layout Layout.Main.LoggingLayout
+@page "/logowanieLekarz"
+
+
+@inject NavigationManager Navigation
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Components;
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
@@ -25,8 +29,6 @@
 
 
 
-@layout Layout.LoggingLayout
-@page "/logowanieLekarz"
 
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
