--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreview.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreview.razor
@@ -23,6 +23,9 @@
         <div class="justify-content-start align-content-start">            
             <btn type="button" class="btn back-icon bi-arrow-left" @onclick="HandleBack"></btn>            
         </div>
+        <div class="col">
+
+        </div>
     </div>
 
 </div>
