--- a/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
@@ -1,7 +1,7 @@
 ﻿@inject NavigationManager Navigation
 @rendermode InteractiveServer
 
-@layout Layout.LoggingLayout
+@layout Layout.Main.LoggingLayout
 @page "/rejestracja"
 
 <div class="container">
