--- a/Patient.Api/Patient.Api/Components/Logging/PatientLoggingPage.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/PatientLoggingPage.razor
@@ -1,4 +1,8 @@
-﻿@using Microsoft.AspNetCore.Authentication
+﻿@layout Layout.Main.LoggingLayout
+@page "/logowaniePacjent"
+
+
+@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Components;
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Newtonsoft.Json
@@ -20,8 +24,7 @@
 
 
 
-@layout Layout.LoggingLayout
-@page "/logowaniePacjent"
+
 
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
