--- a/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterDoctor.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterDoctor.razor
@@ -1,4 +1,9 @@
-﻿@inject NavigationManager Navigation
+﻿@rendermode InteractiveServer
+
+@layout Layout.Main.LoggingLayout
+@page "/rejestracjaLekarz"
+
+@inject NavigationManager Navigation
 @using System.Diagnostics
 @using System.Timers
 @using AutoMapper
@@ -24,10 +29,7 @@
 
 
 
-@rendermode InteractiveServer
 
-@layout Layout.LoggingLayout
-@page "/rejestracjaLekarz"
 
 
 
