--- a/Patient.Api/Patient.Api/Components/_Imports.razor
+++ b/Patient.Api/Patient.Api/Components/_Imports.razor
@@ -11,6 +11,8 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Identity
+@using MudBlazor
+@using MudBlazor.Components
 
 
 
