--- a/Patient.Api/Patient.Api/Components/Layout/Main/NavMenu.razor
+++ b/Patient.Api/Patient.Api/Components/Layout/Main/NavMenu.razor
@@ -9,14 +9,9 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="logowaniePacjent">
-                <span class="" aria-hidden="true"></span> Pacjent
+            <NavLink class="nav-link" href="logowanie">
+                <span class="" aria-hidden="true"></span> Logowanie
             </NavLink> 
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="logowanieLekarz">
-                <span class="" aria-hidden="true"></span> Lekarz
-            </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rejestracja">
