--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AddRecommandationModal.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AddRecommandationModal.razor
@@ -1,5 +1,4 @@
 ﻿@using static Patient.Api.Components.Pages.DoctorPages.Reports.ReportPreview
-@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using Patient.Domain.Interfaces
 @using Patient.Domain.Entities.DTOs
 @using Patient.Domain.Entities
@@ -17,11 +16,8 @@
 
 
 @inject IDoctorApiService _doctorApiService
-@inject IBlobStorageService _blobStorageService
-@inject IDoctorsRepository _doctorsRepository
-@inject UserManager<Patient.Domain.Entities.Actors.Patient> _patientManager
-@inject NavigationManager _navigationManager
-@inject ProtectedSessionStorage sessionStorage
+@inject IReportRepository _reportRepository
+@inject ISnackbar snackBar
 @inject IMedicineRepository _medicineRepository
 
 
@@ -35,71 +31,92 @@
             </div>
             <div class="modal-body">
                 <div class="container">
-                    <h3>Dodaj Rekomendację</h3>
-                    <h4>Pacjent: </h4>
-                    <h4>@addRecommandationModalData.CurrentPatient.Pesel</h4>
-                    <h5 class="pt-2">Opis:</h5>
-                    <InputTextArea id="description" style="width: 100%; height: 200px; resize: none;" @bind-Value="medicalRecommandation.Description" class="form-control"></InputTextArea>
-                    <div class="row pt-5">
-                        <div class="col d-flex justify-content-center align-items-center">
-                            <div class="form-check">
-                                <InputCheckbox id="askForVisit" @bind-Value="askForVisit"></InputCheckbox>
-                                <label for="askForVisit" class="form-check-label">Zapros na wizyte</label>
-                            </div>
-                            <div class="form-check">
-                                <InputCheckbox id="askForVisitOnline" @bind-Value="askForVisitOnline">Zapros na wizyte online</InputCheckbox>
-                                <label for="askForVisitOnline" class="form-check-label">Zapros na wizyte online</label>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <btn type="button" class="btn btn-primary" @onclick="ToggleAddPrescription">Dodaj Receptę</btn>
-                        </div>
-
-                    </div>
-                    @if (addPrescription)
+                    @if (addingRecomandation)
                     {
-                        <div class="row pt-5 p-2">
-                            <div class="col-2">
-                                <p>Wybierz Lek</p>
-                            </div>
-                            <div class="col-8">
-                                <BlazoredTypeahead SearchMethod="GetMedicinesBySearchPhrase"
-                                                    @bind-Value="medicine">
-                                    <SelectedTemplate>@context.Name</SelectedTemplate>
-                                    <ResultTemplate>@context.Name</ResultTemplate>
-                                </BlazoredTypeahead>
-                            </div>
-                            <div class="col-2">
-                                <MudBlazor.MudButton @onclick="AddMedicine">
-                                    Dodaj lek
-                                </MudBlazor.MudButton>
-                            </div>
-                        </div>
+                        @if(addingRecomandation==true&&successfullyAdded==false&&addingFailed==false)
+                        {
+                            <h2 class="text-center">Dodawanie rekomendacji</h2>
+                            <MudProgressCircular Color="Color.Default" Indeterminate="true" />
+                        }
+                        @if (successfullyAdded)
+                        {
+                            <MudAlert Severity="Severity.Success">Pomyślnie dodano rekomendację</MudAlert>
+                        }
+                        @if(addingFailed)
+                        {
+                            <MudAlert Severity="Severity.Error">Nie udało się dodać rekomendacji</MudAlert>
+                        }
 
-                        <MudList T="MedicineToPrescription" Class="pt-5">
-                            @foreach (var item in medicinesToPrescript)
-                            {
-                                <MudListItem @key="item.Id">
-                                    <div class="row p-2">
-                                        <div class="col text-center justify-content-center align-items-center">
-                                            <p>Nazwa leku</p>
-                                            <p>@item.ChosenMedicine.Name</p>
-                                        </div>
-                                        <div class="col-6 text-center justify-content-center align-items-center align-content-center">
-                                            <p>Dawkowanie</p>
-                                            <MudTextField @bind-Value="@item.MedicineDosingDescription" Immediate="false" Label="Opisz dawkowanie" class="form-control" DebounceInterval="200"></MudTextField>
-                                        </div>
-                                        <div class="col-2 justify-content-center align-items-center align-content-center">
-                                            <MudBlazor.MudButton @onclick="(()=>RemoveMedicine(item))" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Delete" Color="Color.Error">Usuń</MudBlazor.MudButton>
-                                        </div>
-                                    </div>
-                                    
-                                </MudListItem>
-                            }
-                        </MudList>
-                        
+
                     }
+                    else
+                    {
+                        <h3>Dodaj Rekomendację</h3>
+                        <h4>Pacjent: </h4>
+                        <h4>@addRecommandationModalData.CurrentPatient.Pesel</h4>
+                        <h5 class="pt-2">Opis:</h5>
+                        <InputTextArea id="description" style="width: 100%; height: 200px; resize: none;" @bind-Value="medicalRecommandation.Description" class="form-control"></InputTextArea>
+                        <div class="row pt-5">
+                            <div class="col d-flex justify-content-center align-items-center">
+                                <div class="form-check">
+                                    <InputCheckbox id="askForVisit" @bind-Value="askForVisit"></InputCheckbox>
+                                    <label for="askForVisit" class="form-check-label">Zapros na wizyte</label>
+                                </div>
+                                <div class="form-check">
+                                    <InputCheckbox id="askForVisitOnline" @bind-Value="askForVisitOnline">Zapros na wizyte online</InputCheckbox>
+                                    <label for="askForVisitOnline" class="form-check-label">Zapros na wizyte online</label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <btn type="button" class="btn btn-primary" @onclick="ToggleAddPrescription">Dodaj Receptę</btn>
+                            </div>
 
+                        </div>
+                        @if (addPrescription)
+                        {
+                            <div class="row pt-5 p-2">
+                                <div class="col-2">
+                                    <p>Wybierz Lek</p>
+                                </div>
+                                <div class="col-8">
+                                    <BlazoredTypeahead SearchMethod="GetMedicinesBySearchPhrase"
+                                                       @bind-Value="medicine">
+                                        <SelectedTemplate>@context.Name</SelectedTemplate>
+                                        <ResultTemplate>@context.Name</ResultTemplate>
+                                    </BlazoredTypeahead>
+                                </div>
+                                <div class="col-2">
+                                    <MudBlazor.MudButton @onclick="AddMedicine">
+                                        Dodaj lek
+                                    </MudBlazor.MudButton>
+                                </div>
+                            </div>
+
+                            <MudList T="MedicineToPrescription" Class="pt-5">
+                                @foreach (var item in medicinesToPrescript)
+                                {
+                                    <MudListItem @key="item.Id">
+                                        <div class="row p-2">
+                                            <div class="col text-center justify-content-center align-items-center">
+                                                <p>Nazwa leku</p>
+                                                <p>@item.ChosenMedicine.Name</p>
+                                            </div>
+                                            <div class="col-6 text-center justify-content-center align-items-center align-content-center">
+                                                <p>Dawkowanie</p>
+                                                <MudTextField @bind-Value="@item.MedicineDosingDescription" Immediate="false" Label="Opisz dawkowanie" class="form-control" DebounceInterval="200"></MudTextField>
+                                            </div>
+                                            <div class="col-2 justify-content-center align-items-center align-content-center">
+                                                <MudBlazor.MudButton @onclick="(()=>RemoveMedicine(item))" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Delete" Color="Color.Error">Usuń</MudBlazor.MudButton>
+                                            </div>
+                                        </div>
+
+                                    </MudListItem>
+                                }
+                            </MudList>
+
+                        }
+                    }
+                    
                 </div>
             </div>
             <div class="modal-footer">
@@ -128,6 +145,12 @@
     private bool askForVisitOnline;
     private bool addPrescription;
 
+    //loading
+    private bool addingRecomandation;
+    private bool successfullyAdded;
+    private bool addingFailed;
+
+
 
     private async Task<IEnumerable<Medicine>> GetMedicinesBySearchPhrase(string searchTerm)
     {
@@ -142,6 +165,8 @@
 
     private async Task AddRecommandationAsync()
     {
+        //check
+        addingRecomandation = true;
         PrescriptionDto prescription = new()
         {
                 MedicineNames = GetPrescriptionMedicinesNames(),
@@ -157,7 +182,24 @@
         medicalRecommandation.ReportId = int.Parse(addRecommandationModalData.ReportId);
 
         var result = await _doctorApiService.SendRequestAddRecommandation(medicalRecommandation);
+        if (result.IsSuccessStatusCode)
+        {
+            successfullyAdded = true;
+            StateHasChanged();
+            await Task.Delay(4000);
+            successfullyAdded = false;
+            await InvokeAsync(CloseModalAddRecommandation);
+        }
+        else
+        {
+            addingFailed = true;
+            StateHasChanged();
 
+            await Task.Delay(4000);
+            addingFailed = false;
+        }
+
+        addingRecomandation = false;
     }
 
     private void AddMedicine()
@@ -209,12 +251,4 @@
         return medicinePrescriptionDescription;
     }
 
-    public string Description { get; set; } = default!;
-    public DateOnly DateOfIssue { get; set; }
-    public Patient.Domain.Entities.DTOs.Prescription.PrescriptionDto? Prescription { get; set; }
-    public bool AskForVisit { get; set; }
-    public bool AskForVisitOnline { get; set; }
-
-    //
-    public string PatientId { get; set; } = default!;
 }
