--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreview.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreview.razor
@@ -18,11 +18,6 @@
 @using Patient.Api.Components.Pages.DoctorPages.Reports.AdditionalComponents
 
 
-
-
-
-
-
 @inject IDoctorApiService _doctorApiService
 @inject IBlobStorageService _blobStorageService
 @inject IDoctorsRepository _doctorsRepository
@@ -31,6 +26,8 @@
 @inject ProtectedSessionStorage sessionStorage
 @inject IMedicineRepository _medicineRepository
 @inject IDialogService DialogService
+@inject IReportRepository _reportRepository
+@inject ISnackbar snackBar
 
 
 
@@ -117,9 +114,25 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col d-flex justify-content-center align-items-center mt-3">
-                        <btn type="button" class="btn btn-primary me-3 " @onclick="HandleShowRecommandationModal">Dodaj rekomendacje</btn>
-                        <btn type="button" class="btn btn-primary me-3">Poproś o konsultacje</btn>
+                    <div class="col">
+                        <div class="d-flex justify-content-center">
+                            <btn type="button" class="btn btn-primary mt-5" @onclick="HandleShowRecommandationModal">Dodaj rekomendacje</btn>
+                        </div>
+                    </div>
+
+                    <div class="col container-dropdown">
+                        <div class="d-flex justify-content-center">
+                            <btn type="button" class="btn btn-primary mt-5" @onclick="HandleShowAskForConsultationComponent">Popros o konsultacje</btn>
+                        </div>
+                        <div class="pt-2">
+                            @if (showAskForConsultationModal)
+                            {
+                                <CascadingValue Value="ReportId">
+                                    <AskForConsultationComponent OnClose="CloseComponentAskForConsul" />
+                                </CascadingValue>
+                            }
+                        </div>
+                                                    
                     </div>
                 </div>
                 
@@ -127,11 +140,10 @@
             <div class="col">
             </div>
 
-            
 
         }
 
-        @if (previewFileModalData.ShowPreviewFileModal)
+        @if (showPreviewFileModal)
         {
             <CascadingValue Value="previewFileModalData">
                 <PreviewFileModal OnClose="CloseModalFilePreview" />
@@ -143,6 +155,7 @@
                 <AddRecommandationModal OnClose="CloseModalAddRecommandation" />
             </CascadingValue>
         }
+        
 
     </div>
 </div>
@@ -166,6 +179,7 @@
 
     //PreviewFileModal
 
+    private bool showPreviewFileModal;
     private PreviewFileModalData previewFileModalData = new();
 
     ///
@@ -174,6 +188,13 @@
 
     //RecommendationModal
     AddRecommandationModalData addRecommandationModalData = new();
+
+    //askForConsultationModal
+    private bool showAskForConsultationModal;
+
+
+
+
 
 
 
@@ -221,8 +242,14 @@
 
     }
 
-    private void HandleShowRecommandationModal()
+    private async void HandleShowRecommandationModal()
     {
+        var report = await _reportRepository.GetReport(int.Parse(ReportId));
+        if (report.MedicalRecommandationId != null)
+        {
+            snackBar.Add("Raport zawiera już rekomendację", Severity.Error);
+            return;
+        }
         addRecommandationModalData.CurrentPatient = currentPatient;
         addRecommandationModalData.ReportId = ReportId;
         showAddRecommandationModal = true;
@@ -230,9 +257,27 @@
         StateHasChanged();
     }
 
+    private void HandleShowAskForConsultationComponent()
+    {
+        showAskForConsultationModal = true;
+
+        StateHasChanged();
+    }
+
     private void CloseModalAddRecommandation()
     {
         showAddRecommandationModal = false;
+    }
+
+    private void CloseComponentAskForConsul(List<string> chosenDoctorTypes)
+    {
+        showAskForConsultationModal = false;
+    }
+
+    private void CloseModalFilePreview()
+    {
+        previewFileModalData.ShowPreviewFileModal = false;
+        StateHasChanged();
     }
 
     private async Task<string> LoadImageBase64(string url)
@@ -249,12 +294,6 @@
             return null;
         }
 
-    }
-
-    private void CloseModalFilePreview()
-    {
-        previewFileModalData.ShowPreviewFileModal = false;
-        StateHasChanged();
     }
 
     public sealed class MedicineToPrescription()
