--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor
@@ -13,12 +13,9 @@
 @using Patient.Domain.Entities.DTOs.Prescription
 @using Patient.Api.Components.Pages.DoctorPages.Reports.AdditionalComponents
 
-
-<div class="container-dropdown-body">
-    <div class="row">
-        <div class="col-4">
-            Wybierz lekarza
-        </div>
+<div class="container">
+    <div class="row text-center">
+        <p>Wybierz lekarza</p>
         <div class="col-8">
             <BlazoredTypeahead SearchMethod="SearchDoctorTypes"
                                 @bind-Value="doctorSpecialization">
@@ -26,36 +23,46 @@
                 <ResultTemplate>@context</ResultTemplate>
             </BlazoredTypeahead>
         </div>
-        <div class="col-2">
-            <MudBlazor.MudButton @onclick="AddDoctor">
+        <div class="col-4">
+            <MudBlazor.MudButton @onclick="AddDoctor" Size="Size.Small">
                 Dodaj lekarza
             </MudBlazor.MudButton>
         </div>
     </div>
 
-    <MudList T="string" Class="pt-5">
+    <MudList T="string" Class=" custom-mud-list">
         @foreach (var item in chosenDoctorTypes)
         {
-            <MudListItem>
-                <div class="row p-2">
-                    <div class="col text-center justify-content-center align-items-center">
-                        <p>Konsultacja: </p>
+            <MudListItem Class="custom-mud-list-item">
+                <div class="row d-flex d-flex-row justify-content-center">
+
+                    <div class="col text-center">
+                        <p class="mb-0">@item</p> 
                     </div>
-                    <div class="col text-center justify-content-center align-items-center">
-                        <p>@item</p>
-                    </div>
-                    <div class="col-2 justify-content-center align-items-center align-content-center">
-                        <MudBlazor.MudButton @onclick="(()=>RemoveDoctorType(item))" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Delete" Color="Color.Error">Usuń</MudBlazor.MudButton>
+                    <div class="col text-end">
+                        <MudBlazor.MudButton @onclick="(() => RemoveDoctorType(item))"
+                                             Variant="Variant.Filled"
+                                             StartIcon="@Icons.Material.Filled.Delete"
+                                             Color="Color.Error"
+                                             Size="Size.Small">        
+                            Usuń
+                        </MudBlazor.MudButton>
                     </div>
                 </div>
 
             </MudListItem>
         }
+        @if (chosenDoctorTypes.Count() > 0)
+        {
+            <div class="row pt-2 d-flex justify-content-center align-items-center">
+                <MudBlazor.MudButton @onclick="HandleAddConsult" Color="Color.Success">
+                    Zatwierdz
+                </MudBlazor.MudButton>
+            </div>
+        }
+        
     </MudList>
-    <MudBlazor.MudButton @onclick="HandleAddConsult">
-        Dodaj
-    </MudBlazor.MudButton>
-    <button class="btn btn-secondary" @onclick="HandleCloseModal">Zamknij</button>
+           
 
 </div>
 
@@ -66,9 +73,7 @@
     public int ReportId { get; set; }
 
     [Parameter]
-    public EventCallback<List<string>> OnClose { get; set; }
-
-
+    public EventCallback<List<string>> OnAdded { get; set; }
 
     private string doctorSpecialization = "";
     private List<string> chosenDoctorTypes = new();
@@ -105,12 +110,10 @@
 
     private async void HandleAddConsult()
     {
-        await OnClose.InvokeAsync(chosenDoctorTypes);
+        await OnAdded.InvokeAsync(chosenDoctorTypes);
+        //dodawanie do reportu lekarza innego - mysle ze mozna w tym komponencie to zrobic
+
     }
 
-    private async void HandleCloseModal()
-    {
-        chosenDoctorTypes = new();
-        await OnClose.InvokeAsync(chosenDoctorTypes);
-    }
+    
 }
