--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor.css
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor.css
@@ -1,13 +1,32 @@
 ﻿.container-dropdown-body {
     position: absolute;
     display: block;
-    top: 10%;
     bottom: 0;
     left: 0;
+    top: 100%;
     color: red;
-    background-color: white;
+    background-color: grey;
     border: 1px solid black;
     z-index: 1000;
-    border-radius: 2%;
+    border-radius: 4%;
+    border-top-left-radius: 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Cień kontenera */
+    max-height: 30%;
+    
+}
+
+.custom-mud-list {
+    padding-left: 0; 
+    padding-right: 0; 
+}
+
+.custom-mud-list-item {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.d-flex-row{
+    flex-direction: row;
 }
