--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreview.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreview.razor
@@ -33,132 +33,133 @@
 
 @page "/lekarz/raporty/{ReportId}"
 
+<div>
+    <div class="container px-4  ">
 
-<div class="container px-4  ">
-        
-    <div class="row pt-5 position-relative">
-        <div class="justify-content-start align-content-start">
-            <NavLink href="/lekarz/raporty">
-                <btn type="button" class="btn back-icon bi-arrow-left"></btn>
-            </NavLink>
-        </div>
-        @if (readingReport)
-        {
-            <MudProgressCircular Color="Color.Success" Indeterminate="true" />
-        }
-        else
-        {
-            <div class="col">
+        <div class="row pt-5 position-relative">
+            <div class="justify-content-start align-content-start">
+                <NavLink href="/lekarz/raporty">
+                    <btn type="button" class="btn back-icon bi-arrow-left"></btn>
+                </NavLink>
             </div>
-            <div class="col-8">
-                <div class="row d-flex align-items-center">
-                    <div class="col d-flex ms-3 me-3">
-                        <div class="me-3 col">
-                            <btn type="button" class="bi-patient-icon" @onclick="()=>HandleShowPatient()"></btn>
-                        </div>
-                        <div class="me-3 col">
-                            <strong>@reportToShow.PatientName</strong>                        
-                            <strong>@reportToShow.PatientSurname</strong>
-                        </div>
-                        <div class="me-3 col">
-                            <strong>@reportToShow.PatientPesel</strong>
-                        </div>
-                        <div class="me-3 col">
-                            <strong>Leczone dolegliwości</strong>
-                        </div>
-                    </div>
-                </div>
-                <div class="report text-center">
-
-                    <div class="row  text-center border-1 border-bottom border-dark text-center">
-                        <h2>Raport</h2>
-                        <p>Data: @reportToShow.DateOfCreating</p>
-                    </div>
-                    <div class="row text-center min-height-10 border-1 border-bottom border-dark">
-                        <h4>Opis:</h4>
-                        <p>@reportToShow.Description</p>
-                    </div>
-                    <div class="row  text-center min-height-7">
-                        <div class="col border-right">
-                            <h4>Pliki:</h4>
-                            @if (reportToShow.FileNames.Count() > 0)
-                            {
-                                for (int i = 0; i < reportToShow.FileNames.Count(); i++)
-                                {
-                                    <btn type="button" class="btn file-block mx-2" @onclick="() => HandleShowFile(i-1)">
-                                        <div class="bi-x-circle"></div>
-                                        <div class="bi-file-icon"></div>
-                                        @* <p>@reportToShow.FileNames.ElementAt(i)</p> *@
-                                    </btn>
-                                }
-                            }
-                        </div>
-                        <div class="col">
-                            <div class="row d-flex-column border-1 border-bottom border-dark">
-                                <p>Lekarze sprawdzajacy:</p>
-                                @foreach (var doctor in doctors)
-                                {
-                                    <p>@doctor.Name @doctor.Surname</p>
-                                }
-
+            @if (readingReport)
+            {
+                <MudProgressCircular Color="Color.Success" Indeterminate="true" />
+            }
+            else
+            {
+                
+                <div class="col mx-5">
+                    <div class="row d-flex align-items-center">
+                        <div class="col d-flex ms-3 me-3">
+                            <div class="me-3 col">
+                                <btn type="button" class="bi-patient-icon" @onclick="()=>HandleShowPatient()"></btn>
                             </div>
-                            <div class="row">
-                                <div class="col">
-                                    @reportToShow.IsChecked
-                                </div>
-                                <div class="col">
-                                    Rekomendacja
-                                </div>
+                            <div class="me-3 col">
+                                <strong>@reportToShow.PatientName</strong>
+                                <strong>@reportToShow.PatientSurname</strong>
+                            </div>
+                            <div class="me-3 col">
+                                <strong>@reportToShow.PatientPesel</strong>
+                            </div>
+                            <div class="me-3 col">
+                                <strong>Leczone dolegliwości</strong>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="d-flex justify-content-center">
-                            <btn type="button" class="btn btn-primary mt-5" @onclick="HandleShowRecommandationModal">Dodaj rekomendacje</btn>
-                        </div>
-                    </div>
+                    <div class="report text-center">
 
-                    <div class="col container-dropdown">
-                        <div class="d-flex justify-content-center">
-                            <btn type="button" class="btn btn-primary mt-5" @onclick="HandleShowAskForConsultationComponent">Popros o konsultacje</btn>
+                        <div class="row  text-center border-1 border-bottom border-dark text-center">
+                            <h2>Raport</h2>
+                            <p>Data: @reportToShow.DateOfCreating</p>
                         </div>
-                        <div class="pt-2">
-                            @if (showAskForConsultationModal)
-                            {
-                                <CascadingValue Value="ReportId">
-                                    <AskForConsultationComponent OnClose="CloseComponentAskForConsul" />
-                                </CascadingValue>
-                            }
+                        <div class="row text-center min-height-10 border-1 border-bottom border-dark">
+                            <h4>Opis:</h4>
+                            <p>@reportToShow.Description</p>
                         </div>
-                                                    
+                        <div class="row  text-center min-height-7">
+                            <div class="col border-right">
+                                <h4>Pliki:</h4>
+                                @if (reportToShow.FileNames.Count() > 0)
+                                {
+                                    for (int i = 0; i < reportToShow.FileNames.Count(); i++)
+                                    {
+                                        <btn type="button" class="btn file-block mx-2" @onclick="() => HandleShowFile(i-1)">
+                                            <div class="bi-x-circle"></div>
+                                            <div class="bi-file-icon"></div>
+                                            @* <p>@reportToShow.FileNames.ElementAt(i)</p> *@
+                                        </btn>
+                                    }
+                                }
+                            </div>
+                            <div class="col">
+                                <div class="row d-flex-column border-1 border-bottom border-dark">
+                                    <p>Lekarze sprawdzajacy:</p>
+                                    @foreach (var doctor in doctors)
+                                    {
+                                        <p>@doctor.Name @doctor.Surname</p>
+                                    }
+
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        @reportToShow.IsChecked
+                                    </div>
+                                    <div class="col">
+                                        Rekomendacja
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    
+
                 </div>
                 
+
+
+            }
+        </div> 
+
+    </div>        
+    <div class="container px-4">
+        <div class="row d-flex mx-5">
+            <div class="col text-center mx-5">
+                <btn type="button" class="btn btn-primary mt-5" @onclick="HandleShowRecommandationModal">Dodaj rekomendacje</btn>
             </div>
-            <div class="col">
+            <div class="col text-center mx-5">
+                <div class="position-relative">
+                    <button class="btn btn-primary mt-5" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        Popros o konsultacje
+                    </button>
+                    <div class="collapse position-relative" id="collapseExample" style="left: 33.5%; width: 70%;">
+                        <div class="card card-body position-absolute" style="z-index: 1000; transform: translateY(0);">
+                            <CascadingValue Value="ReportId">
+                                <AskForConsultationComponent />
+                            </CascadingValue>
+                        </div>  
+                    </div>
+                </div>
             </div>
-
-
-        }
-
-        @if (showPreviewFileModal)
-        {
-            <CascadingValue Value="previewFileModalData">
-                <PreviewFileModal OnClose="CloseModalFilePreview" />
-            </CascadingValue>
-        }
-        @if (showAddRecommandationModal)
-        {
-            <CascadingValue Value="addRecommandationModalData">
-                <AddRecommandationModal OnClose="CloseModalAddRecommandation" />
-            </CascadingValue>
-        }
-        
-
+        </div>
+            
+             
     </div>
+    @if (showPreviewFileModal)
+    {
+        <CascadingValue Value="previewFileModalData">
+            <PreviewFileModal OnClose="CloseModalFilePreview" />
+        </CascadingValue>
+    }
+    @if (showAddRecommandationModal)
+    {
+        <CascadingValue Value="addRecommandationModalData">
+            <AddRecommandationModal OnClose="CloseModalAddRecommandation" />
+        </CascadingValue>
+    }
 </div>
+
+
 
 
 @code {
@@ -191,11 +192,6 @@
 
     //askForConsultationModal
     private bool showAskForConsultationModal;
-
-
-
-
-
 
 
     protected async override Task OnInitializedAsync()
@@ -253,13 +249,6 @@
         addRecommandationModalData.CurrentPatient = currentPatient;
         addRecommandationModalData.ReportId = ReportId;
         showAddRecommandationModal = true;
-
-        StateHasChanged();
-    }
-
-    private void HandleShowAskForConsultationComponent()
-    {
-        showAskForConsultationModal = true;
 
         StateHasChanged();
     }
