--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/MyAccount.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/MyAccount.razor
@@ -2,9 +2,21 @@
 
 @page "/pacjent/konto"
 
+@using MudBlazor
 
-<h3>Moje konto</h3>
-
+<div class="container">
+    <section>
+        <div class="row">
+            <MudAvatar Size="Size.Large" Style="width: 10%; height: 10%;">
+                <MudImage Src="/images/pies-rasy-beagle.jpg"></MudImage>
+            </MudAvatar>
+        </div>
+    </section>
+    <section>
+        Dane
+    </section>
+    
+</div>
 @code {
 
 }
