--- a/Patient.Api/Patient.Api.Client/Layout/MyAccount/SideAccountMenu.razor
+++ b/Patient.Api/Patient.Api.Client/Layout/MyAccount/SideAccountMenu.razor
@@ -13,6 +13,11 @@
                 <span class="bi" aria-hidden="true"></span> Dokumentacja
             </NavLink> 
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/pacjent/wywiad">
+                <span class="bi" aria-hidden="true"></span> Wywiad medyczny    
+            </NavLink>
+        </div>
 
     </nav>
 </div>
