--- a/Patient.Api/Patient.Api/Components/Logging/LogIn.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/LogIn.razor
@@ -12,8 +12,8 @@
         <div class="col-6 pt-5 d-flex align-items-center text-center justify-content-center">
             <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
                 <div class="card-body">
-                    <h2 class="card-title text-center mb-4">Pacjent</h2>
-                    <NavLink href="/logowaniePacjent">
+                    <h2 class="card-title text-center mb-4">Lekarz</h2>
+                    <NavLink href="/logowanieLekarz">
                         <btn type="button" class="btn btn-primary"> Logowanie</btn>
                     </NavLink>
                 </div>
@@ -23,9 +23,9 @@
         </div>
         <div class="col-6 d-flex align-items-center justify-content-center text-center pt-5">
             <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
-                <div class="card-body">
-                    <h2 class="card-title text-center mb-4">Lekarz</h2>
-                    <NavLink href="/logowanieLekarz">
+                <div class="card-body" style="background-color:aqua">
+                    <h2 class="card-title text-center mb-4">Pacjent</h2>
+                    <NavLink href="/logowaniePacjent">
                         <btn type="button" class="btn btn-primary"> Logowanie</btn>
                     </NavLink>
                 </div>
