--- a/Patient.Api/Patient.Api/Components/Logging/PatientLoggingPage.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/PatientLoggingPage.razor
@@ -28,7 +28,7 @@
 
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
-        <div class="card-body">
+        <div class="card-body" style="background-color:aqua">
             <h2 class="card-title text-center mb-4">Logowanie - Pacjent</h2>
             <section>
                 <StatusMessage Message="@errorMessage" />
