--- a/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
@@ -13,8 +13,8 @@
         <div class="col-6 pt-5 d-flex align-items-center text-center justify-content-center">
             <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
                 <div class="card-body">
-                    <h2 class="card-title text-center mb-4">Pacjent</h2>
-                    <NavLink href="/rejestracjaPacjent">
+                    <h2 class="card-title text-center mb-4">Lekarz</h2>
+                    <NavLink href="/rejestracjaLekarz">
                         <btn type="button" class="btn btn-primary"> Rejestracja</btn>
                     </NavLink>
                 </div>
@@ -24,9 +24,9 @@
         </div>
         <div class="col-6 d-flex align-items-center justify-content-center text-center pt-5">
             <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
-                <div class="card-body">
-                    <h2 class="card-title text-center mb-4">Lekarz</h2>
-                    <NavLink href="/rejestracjaLekarz">
+                <div class="card-body" style="background-color:aqua">
+                    <h2 class="card-title text-center mb-4">Pacjent</h2>
+                    <NavLink href="/rejestracjaPacjent">
                         <btn type="button" class="btn btn-primary"> Rejestracja</btn>
                     </NavLink>
                 </div>
