--- a/Patient.Api/Patient.Api/Components/Layout/Main/MainLayout.razor
+++ b/Patient.Api/Patient.Api/Components/Layout/Main/MainLayout.razor
@@ -2,10 +2,12 @@
 
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
+    <div class="menu-bar">
+        <Patient.Api.Components.Layout.Main.Menus.MainMenu />
     </div>
-
+    <div class="demo-sign text-center">
+        <Patient.Api.Components.Layout.Main.AdditionalComponents.DemoSign/>
+    </div>
     <main>
         
         <article class="content px-10">
