--- a/Patient.Api/Patient.Api/Components/Logging/DoctorLoggingPage.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/DoctorLoggingPage.razor
@@ -30,8 +30,8 @@
 
 
 
-<div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
+<div class="container d-flex justify-content-center align-items-center pt-5">
+    <div class="card shadow-sm pt-5" style="width: 100%; max-width: 400px;">
         <div class="card-body">
             <h2 class="card-title text-center mb-4">Logowanie Lekarz</h2>
             <section>
@@ -57,7 +57,7 @@
                             </label>
                         </div>
                         <div>
-                            <button type="submit" class="w-100 btn btn-lg btn-primary">Zaloguj się</button>
+                        <button type="submit" class="w-100 btn btn-lg btn-primary btn-log-in">Zaloguj się</button>
                         </div>
                         
                     </EditForm>
