--- a/Patient.Api/Patient.Api/Components/Logging/LogIn.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/LogIn.razor
@@ -5,16 +5,18 @@
 
 <div class="container">
     <div class="row">
-        <p class="text-center">Dzielny pacjent - w ciaglej opiece</p>
+        
     </div>
-    <div class="row">
+    <div class="row pt-5">
         <h2 class="align-items-center text-center pt-5">Zaloguj się</h2>
         <div class="col-6 pt-5 d-flex align-items-center text-center justify-content-center">
-            <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
-                <div class="card-body">
+            <div class="card shadow-sm" style="width: 100%; max-width: 300px;">
+                <div class="card-body pt-2">
                     <h2 class="card-title text-center mb-4">Lekarz</h2>
+                    <img src="/images/icons/doctoricon.jpg" class="card-img" >
+                  
                     <NavLink href="/logowanieLekarz">
-                        <btn type="button" class="btn btn-primary"> Logowanie</btn>
+                        <btn type="button" class="btn btn-outline-primary btn-log-doctor" style=""> Logowanie</btn>
                     </NavLink>
                 </div>
             </div>
@@ -22,11 +24,13 @@
 
         </div>
         <div class="col-6 d-flex align-items-center justify-content-center text-center pt-5">
-            <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
-                <div class="card-body" style="background-color:aqua">
+            <div class="card shadow-sm" style="width: 100%; max-width: 300px;">
+                <div class="card-body pt-2">
                     <h2 class="card-title text-center mb-4">Pacjent</h2>
+                    <img src="/images/icons/patientIcon.jpg" class="card-img">
+
                     <NavLink href="/logowaniePacjent">
-                        <btn type="button" class="btn btn-primary"> Logowanie</btn>
+                        <btn type="button" class="btn btn-primary btn-log-patient"> Logowanie</btn>
                     </NavLink>
                 </div>
             </div>
