--- a/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
@@ -9,7 +9,7 @@
         <p class="text-center">Dzielny pacjent - w ciaglej opiece</p>
     </div>
     <div class="row">
-        <h2 class="align-items-center text-center pt-5">Zaloguj się</h2>
+        <h2 class="align-items-center text-center pt-5">Rejestracja</h2>
         <div class="col-6 pt-5 d-flex align-items-center text-center justify-content-center">
             <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
                 <div class="card-body">
