--- a/Patient.Api/Patient.Api/Components/Layout/Main/MainLayout.razor.css
+++ b/Patient.Api/Patient.Api/Components/Layout/Main/MainLayout.razor.css
@@ -2,43 +2,34 @@ body {
     overflow-x: hidden;
 }
 
-.page {
+.page{
+    background-image: url('/images/kurp2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+}
+
+main{
+    flex:1;
+}
+
+.menu-bar {
+    width: 100%;
+    height: 7%;
     position: relative;
-    display: flex;
-    flex-direction: column;
+    z-index: 1000;
 }
 
-main {
-    flex: 1;
+.demo-sign{
+    width:100vw;
+    height: 7%;
+    position: fixed;
+    z-index: 1000;
+    top:96%;
 }
 
-.sidebar {
-    background-image: linear-gradient(45deg, rgb(144, 238, 144) 0%, rgb(0,123,255)70%);
-}
-
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        text-decoration: none;
-    }
-
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
-
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
 
 @media (max-width: 640.98px) {
     .top-row {
@@ -51,33 +42,7 @@ main {
 }
 
 @media (min-width: 641px) {
-    .page {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
+    
 
 
 }
