--- a/Patient.Api/Patient.Api/Components/Logging/PatientLoggingPage.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/PatientLoggingPage.razor
@@ -23,12 +23,9 @@
 
 
 
-
-
-
-<div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
-        <div class="card-body" style="background-color:aqua">
+<div class="container d-flex justify-content-center align-items-center pt-5">
+    <div class="card shadow-sm pt-5" style="width: 100%; max-width: 400px;">
+        <div class="card-body">
             <h2 class="card-title text-center mb-4">Logowanie - Pacjent</h2>
             <section>
                 <StatusMessage Message="@errorMessage" />
@@ -53,7 +50,7 @@
                             </label>
                         </div>
                         <div>
-                            <button type="submit" class="w-100 btn btn-lg btn-primary">Zaloguj się</button>
+                        <button type="submit" class="w-100 btn btn-lg btn-primary btn-log-in">Zaloguj się</button>
                         </div>
                         
                     </EditForm>
